--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body{
     height: 200px;
    
     color: white;
+
    
 }
 
@@ -53,11 +54,14 @@ font-weight: 400;
 }
 
 .offer-content-1{
-   
+    
     font-family: Inter;
    
 }
 
+.offer-content-1 p{
+    text-align: center;
+}
 .offer-content-1 .offer-title,.offer-description, .offer-subtitle{
    text-align: center;
 }
@@ -108,7 +112,7 @@ font-weight: 400;
 
 .welcome-content-2{
     width: 40%;
-    text-align: center;
+   
    
 }
 .welcome-content-1 h1{
@@ -146,7 +150,7 @@ font-family: Inter;
 font-size: 25px;
 font-weight: 600;
 
-letter-spacing: 0%;
+
 text-align: center;
 text-transform: capitalize;
 }
@@ -286,7 +290,7 @@ text-align: center;
 .product-showing{
     width: 1000px;
     height:auto;
-    border: 2px solid green;
+  
     margin: auto;
     margin-top: 100px;
 }
@@ -304,5 +308,264 @@ text-align: center;
 .product-text p{
     color: #757575;
 }
+
+.product-images .div-1{
+ width: 100%;
+}
+
+.product-images .div-1 img{
+    width: 33%;
+}
+.product-images .div-2{
+ width: 100%;
+}
+
+.product-images .div-2 img{
+    width: 33%;
+}
 /* product-showing-section ends here */
+
+/* 
+media query statrs here
+*/
+
+.hide{
+
+    display: none;
+}
+
+@media screen and (max-width:576px) {
+    .new-year-container{
+        width: 100%;
+        justify-content: start;
+        margin: 0;
+        background-size: 100% 100%;
+        object-fit: cover;
+    }
+
+    .new-year-content{
+        width: 100%;
+       
+    }
+
+    .new-year-content h1{
+        font-size: 30px;
+        text-align: left;
+        margin: 0;
+    }
+    .new-year-content p{
+        margin: 0  0 10px 0;
+        text-align: left;
+    }
+}
+
+
+@media screen and (min-width:577px) and (max-width:992px) {
+    .new-year-container{
+        width: 100%;
+        justify-content: center;
+        margin: 0;
+        background-size: 100% 100%;
+        object-fit: cover;
+    }
+}
+
+@media screen and (max-width:576px) {
+    .offer{
+        width: 100%;
+    }
+    .offer-content-image p{
+        margin-left: 0;
+        width: 100%;
+    }
+    
+    .offer-content-image p img{
+        max-width: 100%;
+        margin-top: 50px;
+    }
+
+}
+
+
+@media screen and (min-width:577px) and (max-width:990px) {
+    .offer-content-image p{
+        margin-left: 0;
+        width: 100%;
+        text-align: center;
+    }
+
+    .offer-content-image p img{
+        max-width: 100%;
+        margin-top: 50px;
+    }
+}
+
+@media screen and (max-width:576px) {
+    .welcome-container{
+        flex-direction: column;
+        width: 100%;
+        background-size: 100% 100%;
+    
+        object-fit: cover;
+    }
+
+    .welcome-content-1{
+        width: 100%;
+      margin: 0;
+      text-align: left;
+    }
+     
+
+    .welcome-content-2 p img{
+        max-width: 100%;
+    } 
+}
+
+
+@media screen and (max-width:576px){
+
+    .address-section{
+        width: 100%;
+    }
+    .address-content{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:576px){
+    .best-offer-container{
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .best-offer-content-1{
+        width: 80%;
+        margin: 0;
+        margin: 0 auto;
+    }
+
+    .best-offer-content-1 h1{
+        font-size: 35px;
+    }
+
+    .best-offer-content-1 p,h4{
+        font-size: 16px;
+        text-align: justify;
+    }
+    .best-offer-content-1 h4{
+        font-size: 25px;
+        text-align: justify;
+    }
+
+    .best-offer-content-2{
+        width: 90%;
+    }
+
+    .best-offer-content-2 p{
+        text-align: center;
+    }
+
+    .best-offer-content-3{
+        width: 80%;
+        margin: 0;
+        margin: 0 auto;
+       
+    }
+
+    .offer-2024{
+        font-size: 50px;
+    }
+
+    .best-offer-content-3 p{
+        font-size: 35px;
+        text-align: justify;
+    }
+
+    .best-offer-content-3 img{
+        max-width: 100%;
+       
+    }
+
+}
+
+@media screen and (max-width:576px){
+    .holiday-section{
+        width: 100%;
+    }
+
+    .holiday-section h1{
+        font-size: 40px;
+        margin: 10px;
+    }
+    .holiday-section p{
+        text-align: justify;
+    }
+}
+
+
+
+@media screen and (max-width:576px) {
+    .discount-section{
+        width: 100%;
+        height: 200px;
+        margin: 0;
+        padding: 0;
+       
+    }
+
+    .coupon-container{
+        width: 100%;
+        position: absolute;
+        top: 55%;
+    }
+
+    .gift-box{
+        width: 100%;
+        height: 100%;
+    }
+
+    .img1{
+        max-width: 50%;
+        top: 30%;
+        left: 0;
+    }
+    .img2{
+        max-width: 40%;
+        top: 0;
+        right: 2%;
+    }
+}
+
+@media screen and (max-width:576px){
+    .product-showing{
+        width: 100%;
+        margin: 0;
+    }
+
+    .product-showing .product-text{
+        width: 100%;
+        margin: 0 auto;
+        text-align: justify;
+    }
+
+    .product-images .div-1{
+        width: 100%;
+        margin: 0;
+        margin-top: 100px;
+        display: flex;
+    }
+
+    .product-images .div-2{
+       width: 100%;
+       display: flex;
+    }
+   
+    .product-images .div-1 img{
+        max-width: 100%;
+        margin: 0;
+        border-radius: 0;
+        padding: 0;
+    } 
+
+}
 
